--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -50,7 +50,7 @@ a small {
 }
 
 .wrapper {
-  width:860px;
+  width:800px;
   margin:0 auto;
 }
 
@@ -97,8 +97,11 @@ th {
 
 img {
   max-width:100%;
+  /* margin-top:-15px; */
   margin-left:15px;
-  margin-bottom:15px;
+  margin-right:55px;
+  margin-bottom:20px;
+  float:left;
 }
 
 header {
