--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,8 +8,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
+  margin:0 0 10px;
 }
 
 p, ul, ol, table, pre, dl {
@@ -26,6 +25,7 @@ h1, h2, h3 {
 
 h1 {
   font-size:28px;
+  color:#222;
 }
 
 h2 {
@@ -100,17 +100,26 @@ img {
 }
 
 img.center {
-  max-width:80%;
-  margin-right: 10%;
-  margin-left: 10%;
+  max-width:100%;
+  /* margin-right: 10%; */
+  /* margin-left: 10%; */
   border-radius: 2px;
   /* padding: 10px; */
   /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.9); */
 } 
 
+figcaption {
+  width:100%;
+  font-size: 90%;
+  /* margin-left: 5%; */
+  /* padding: 5px; */
+  border-top:1px solid #e5e5e5;
+  text-align: center;
+}
+
 ol {
-    padding: 0px;
-    margin: 0 0 0 15px;
+  padding: 0px;
+  margin: 0 0 0 15px;
 }
 
 header {
