--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,12 +3,13 @@
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#444;
+  color:#222;
   font-weight:300;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin:0 0 10px;
+  text-align: center;
 }
 
 p, ul, ol, table, pre, dl {
@@ -16,7 +17,7 @@ p, ul, ol, table, pre, dl {
 }
 
 p {
-  text-align: justify;
+  text-align: center;
 }
 
 h1, h2, h3 {
