--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,7 +5,8 @@ body {
     font-family: 'Lato';
     color: #333333;
     background-color: #fafafa;
-    padding: 0 10px
+    padding: 0 10px;
+    font-size: 18px;
 }
 h1,
 h2,
