--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,7 +4,7 @@ body {
     line-height: 1.6;
     font-family: 'Lato';
     color: #333333;
-    background-color: #fafafa;
+    background-color: #fcfcfc;
     padding: 0 10px;
     font-size: 18px;
 }
